@@ -43,6 +43,8 @@
 #include <Pegasus/Common/String.h>
 #include <Pegasus/Common/System.h>
 
+#include <Pegasus/Common/PegasusVersion.h>
+
 PEGASUS_USING_STD;
 
 PEGASUS_NAMESPACE_BEGIN
