@@ -26,16 +26,19 @@
 //
 //%/////////////////////////////////////////////////////////////////////////////
 
+#ifndef PLATFORM_BUILD_DATE
+#define PLATFORM_BUILD_DATE __DATE__
+#endif
 
-#define PLATFORM_PRODUCT_NAME  "HP WBEM Services"
-#define PLATFORM_PRODUCT_VERSION  "A.00.01"
+#define PLATFORM_PRODUCT_NAME  "HP-UX WBEM Services"
+#define PLATFORM_PRODUCT_VERSION "0.0.1"
 #define PLATFORM_PRODUCT_STATUS  "Pre-Release" 
 
 #ifndef PLATFORM_COMPONENT_NAME
 #define PLATFORM_COMPONENT_NAME  "HP WBEM Services Component"
 #endif
 
-#ifndef PLATFORM_COMPONENT_VERSION
+#ifndef PLATFORM_COMPONENT_VERSION 
 #define PLATFORM_COMPONENT_VERSION PLATFORM_PRODUCT_VERSION 
 #endif
 
@@ -43,4 +46,8 @@
 #define PLATFORM_COMPONENT_STATUS PLATFORM_PRODUCT_STATUS
 #endif
 
-const char PLATFORM_EMBEDDED_IDENTIFICATION_STRING[] = "@(#)"PLATFORM_PRODUCT_NAME" "PLATFORM_PRODUCT_VERSION" "PLATFORM_PRODUCT_STATUS"\n@(#)"PLATFORM_PRODUCT_NAME"-"PLATFORM_COMPONENT_NAME" "PLATFORM_COMPONENT_VERSION" "PLATFORM_COMPONENT_STATUS;
+#ifndef COMPONENT_BUILD_DATE
+#define COMPONENT_BUILD_DATE __DATE__
+#endif
+
+const char PLATFORM_EMBEDDED_IDENTIFICATION_STRING[] = "@(#)"PLATFORM_PRODUCT_NAME" "PLATFORM_PRODUCT_VERSION" "PLATFORM_PRODUCT_STATUS"("PLATFORM_BUILD_DATE")""\n@(#)"PLATFORM_PRODUCT_NAME"-"PLATFORM_COMPONENT_NAME" "PLATFORM_COMPONENT_VERSION" "PLATFORM_COMPONENT_STATUS"("COMPONENT_BUILD_DATE")";
