@@ -30,7 +30,7 @@
 //
 //%/////////////////////////////////////////////////////////////////////////////
 
-
+#include <Pegasus/Common/PegasusVersion.h>
 #include "slp.h"
 
 #ifdef PEGASUS_OS_TRU64
